pinとcircleの削除，favoriteのuserDefaultsはいまだ動かず

--- a/Arealert/Base.lproj/Main.storyboard
+++ b/Arealert/Base.lproj/Main.storyboard
@@ -22,9 +22,10 @@
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="rzQ-x1-9Re" appends="YES" id="CYY-Ni-X5O"/>
+                                    <outletCollection property="gestureRecognizers" destination="jOq-HH-Yfe" appends="YES" id="ij6-gG-dBv"/>
                                 </connections>
                             </mapView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder=" search" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="XYv-tv-XvI">
+                            <textField opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder=" search" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="XYv-tv-XvI">
                                 <rect key="frame" x="16" y="64" width="382" height="34"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -85,6 +86,11 @@
                         <action selector="mapLongPressed:" destination="BYZ-38-t0r" id="xwD-ph-PTC"/>
                     </connections>
                 </pongPressGestureRecognizer>
+                <tapGestureRecognizer id="jOq-HH-Yfe">
+                    <connections>
+                        <action selector="mapTapped:" destination="BYZ-38-t0r" id="m4S-Hg-qNs"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="137.94642857142856"/>
         </scene>
@@ -102,6 +108,25 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="780" id="erK-mk-zle"/>
                                 </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="favoriteCell" textLabel="pjA-ci-zXZ" style="IBUITableViewCellStyleDefault" id="Vlz-kX-Zme">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Vlz-kX-Zme" id="CXM-QI-lcY">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="pjA-ci-zXZ">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Rb-IB-ASu">
                                 <rect key="frame" x="20" y="20" width="31" height="30"/>
@@ -127,6 +152,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wNg-Z1-ZNB"/>
+                    <connections>
+                        <outlet property="tableView" destination="bSY-JO-dxG" id="ozV-ai-x65"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mdb-bE-9TD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
